--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,3 @@
- *{
-    margin: 0 auto;
- }
-
- .navBar{
-    list-style: none;
-    display: flex;
-    border: 2px solid purple;
-    font-size: 32px ;
- }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
